
[package]
name = "nexcore-error"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Zero-dependency error handling for NexVigilant Core ecosystem"
license = "MIT"
repository = "https://github.com/nexvigilant/nexcore"
keywords = ["error", "result", "no-std"]
categories = ["no-std", "rust-patterns"]

[dependencies]
# Replaces: thiserror, anyhow
nexcore-error-derive = { path = "../nexcore-error-derive", optional = true }
serde = { workspace = true, optional = true }

[features]
default = ["std", "derive", "serde"]
std = []
derive = ["dep:nexcore-error-derive"]
serde = ["dep:serde"]

[lints]
workspace = true
